# loop_functions

loop-functions/: CMakeLists.txt
loop-functions/chocolate/AAC/: ChocolateAACLoopFunc.cpp  ChocolateAACLoopFunc.h
loop-functions/coconut/: AggregationOneSpotLoopFunc.cpp  AggregationOneSpotLoopFunc.h  CMakeLists.txt  FastPointFindingLoopFunc.cpp  FastPointFindingLoopFunc.h  ForagingTwoSpotsLoopFunc.cpp  ForagingTwoSpotsLoopFunc.h  GridExplorationLoopFunc.cpp  GridExplorationLoopFunc.h
loop-functions/vanilla/: AggregationTwoSpotsLoopFunc.cpp  ForagingTwoSpotsLoopFunc.cpp
scenarios/aggregation-black-white/: aggregation_bw.argos  aggregation_bw_visu.argos
scenarios/chocolate/: chocolate_aac_visu.argos  chocolate_aac_visu.argos.xml  chocolate_aac_visu.xml  chocolate_cfa_visu.argos.xml  chocolate_lcn_visu.xml  chocolate_sca_visu.argos  chocolate_spc_visu.xml
scenarios/coconut/bounded/: aggregation.argos  foraging.argos  gridexploration.argos
scenarios/coconut/unbounded/: aggregation.argos  foraging.argos  gridexploration.argos
scenarios/tuttifrutti/: tuttiAggregation.argos  tuttiForaging.argos
scenarios/vanilla/FSM/: aggregation.argos  aggregation_visu.argos  foraging.argos  foraging_visu.argos
